[project]
name = "blogagentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.117.1",
    "langchain-groq>=0.3.8",
    "langgraph>=0.2.56,<0.4.0",
    "langgraph-cli[inmem]>=0.1.63,<0.1.89",
    "uvicorn>=0.37.0",
    "watchdog>=6.0.0",
]
